<resources>
    <string name="app_name">中英互译</string>
    <string name="app_des">告别说不出口的英语</string>
    <string name="title_about">关于我们</string>
    <string name="title_share_preview">分享预览</string>
    <string name="title_TranslatePractice">练习</string>
    <string name="title_ai">Ai</string>
    <string name="title_ai_learn">跟Ai学英语</string>
    <string name="title_Practice">口语练习</string>
    <string name="title_video_spoken">口语视频</string>
    <string name="title_listening">听力</string>
    <string name="title_intensive_listening">精听</string>
    <string name="title_word_vocabulary">词汇学习</string>
    <string name="title_spoken_english_study">口语学习</string>
    <string name="title_initiate">自然拼读</string>
    <string name="title_symbol">音标</string>
    <string name="title_word_study">单词</string>
    <string name="title_words">背单词</string>
    <string name="title_word_study_summary">词汇大全</string>
    <string name="title_word_study_vocabulary">词汇</string>
    <string name="title_english_jokes">笑话</string>
    <string name="title_english_video">视频</string>
    <string name="title_english_story">故事</string>
    <string name="title_juhe">综合</string>
    <string name="title_style">主题样式</string>
    <string name="title_more">更多</string>
    <string name="title_all_unit">单元选择</string>
    <string name="title_article_collected">文章</string>
    <string name="title_home_tab">首页</string>
    <string name="title_translate">翻译</string>
    <string name="title_yueyufayin">发音</string>
    <string name="title_dictionary">词典</string>
    <string name="title_my_newword">生词本</string>
    <string name="title_sentence">句海</string>
    <string name="title_english_dic">英英</string>
    <string name="title_chinese_dic">中汉</string>
    <string name="title_study_category">学习</string>
    <string name="title_study">悦读</string>
    <string name="title_daily_english">听力练习</string>
    <string name="title_xvideo">英语小视频</string>
    <string name="title_xvideo_yys">小视频</string>
    <string name="title_listen_fm">悦听</string>
    <string name="title_yuwen">语文</string>
    <string name="title_category">分类</string>
    <string name="title_college_class">学科</string>
    <string name="title_hotel">酒店</string>
    <string name="title_moments">英语圈</string>
    <string name="title_moments_add">分享到英语圈</string>
    <string name="title_leisure">发现</string>
    <string name="title_instagram">图片分享社区</string>
    <string name="title_cailing">酷炫彩铃</string>
    <string name="title_sougo_wechat">微信英语</string>
    <string name="title_reading">阅读基地</string>
    <string name="title_website">不错的学习网站</string>
    <string name="title_favorite">收藏</string>
    <string name="title_reading_comprehension">阅读理解</string>
    <string name="update_title">新版来了</string>
    <string name="update_info">更快、更好用！</string>
    <string name="title_dialog_select">选择场景</string>
    <string name="title_settings">应用设置</string>
    <string name="no_moments">暂无评论，快抢个沙发吧</string>
    <string name="title_setting">设置</string>
    <string name="title_offline_dic">离线词典</string>
    <string name="title_comments">吐槽评价</string>
    <string name="comment">评论</string>
    <string name="title_apps">发现APP</string>
    <string name="title_cantonese">粤语</string>
    <string name="title_duanzi">段子笑话</string>
    <string name="title_duanzi_mm">福利</string>
    <string name="title_privacy">隐私政策</string>
    <string name="title_terms">服务条款</string>
    <string name="title_duanzi_img">图片笑话</string>
    <string name="title_duanzi_gif">小视频</string>
    <string name="title_web_npr">NPR</string>
    <string name="title_unsupported_type">抱歉，您的版本过低，内容无法显示，请升级到最新版。</string>
    <string name="title_web_AmericanLife">AmericanLife</string>
    <string name="title_composition">作文</string>
    <string name="title_com_exam">作文/考题</string>
    <string name="title_grammer_story">语法/故事</string>
    <string name="title_ch_dictionary">汉语字典</string>
    <string name="title_dictionary_idiom">成语词典</string>
    <string name="dic_minimalist">精简版词典</string>
    <string name="dic_normal">标准版词典</string>
    <string name="dic_sentence">离线句子翻译</string>
    <string name="hh_offline">离线汉语词典</string>
    <string name="kz_offline">扩展词库</string>
    <string name="title_word_study_change_plan">选择词汇书</string>
    <string name="evaluation_prompt">关于口语评测</string>
    <string name="word_study_detail_menu">听选</string>
    <string name="offline_download">下载Mp3</string>
    <string name="background_color">背景颜色</string>
    <string name="font_color">字体颜色</string>
    <string name="font_size">字体大小</string>
    <string name="font_style">字体样式</string>
    <string name="font_style_left">居左</string>
    <string name="font_style_right">居右</string>
    <string name="font_style_center">居中</string>
    <string name="font_style_bold">粗体</string>
    <string name="font_style_italic">斜体</string>
    <string name="updage_later">稍后</string>
    <string name="updage_now">更新</string>
    <string name="prompt">提示</string>
    <string name="play_video_background">后台播放</string>
    <string name="change_another_one">换一个</string>
    <string name="retry">重填</string>
    <string name="recommend">推荐</string>
    <string name="selection">精选</string>
    <string name="recent_study_empty">赶紧去订阅课程吧</string>
    <string name="recent">订阅</string>
    <string name="beginner">初级</string>
    <string name="intermediate">中级</string>
    <string name="advanced">高级</string>
    <string name="new_concept">新概念</string>
    <string name="title_zhannei">站内</string>
    <string name="title_agree">同意 进入</string>
    <string name="title_disagree">不同意</string>
    <string name="title_zhanwai">站外</string>
    <string name="menu_share">DIY分享</string>
    <string name="menu_settings">语速调节</string>
    <string name="app_name_share">App:中英互译</string>
    <string name="share_text_hint">请输入分享内容</string>
    <string name="moments_hint">请输入分享到英语圈的内容，仅限英文</string>
    <string name="input_et_hint_english">请输入需要查询的英文</string>
    <string name="input_et_hint_chinese">请输入需要查询的中文</string>
    <string name="input_et_hint_dictionary">请输入需要查询的中文或英文</string>
    <string name="input_et_hint">请输入需要翻译的中文或英文</string>
    <string name="input_comment_hint">写评论</string>
    <string name="input_et_zh_yue_hint">请输入需要翻译的中文或粤语</string>
    <string name="input_et_empty">请输入查询内容</string>
    <string name="ai_chat_input_hint">just say something</string>
    <string name="ai_turing_input_hint">聊五块钱的</string>
    <string name="ch_dic_input_hint">请输入需要查询的文字、词语、成语、诗词</string>
    <string name="translate_course_input_hint">请翻译</string>
    <string name="listen_course_input_hint">请输入你听到的内容</string>
    <string name="ch_dic_idiom_input_hint">请输入需要查询的成语</string>
    <string name="input_translate_hint">请翻译</string>
    <string name="choice_hint">请选择</string>
    <string name="enter_hint">请输入</string>
    <string name="auto_clear_after_translate">翻译完成后自动清空输入框</string>
    <string name="auto_play_after_translate">自动播放翻译结果</string>
    <string name="auto_clear">退出应用删除非收藏记录</string>
    <string name="search">搜索</string>
    <string name="change_books">选单词书</string>
    <string name="start_unlock">开始闯关</string>
    <string name="word_task">已完成</string>
    <string name="glossary">词汇大全</string>
    <string name="new_and_wrong">我的生词本</string>
    <string name="query">查询</string>
    <string name="word_to_test">开始考试</string>
    <string name="word_study_continue">继续学习</string>
    <string name="word_start">开始学习</string>
    <string name="word_review">复习一下</string>
    <string name="listen_previous">上一句</string>
    <string name="listen_next">下一句</string>
    <string name="listen_subtitle">字幕</string>
    <string name="listen_know">听懂了</string>
    <string name="listen_unknow">没听懂</string>
    <string name="recognize_know">认识</string>
    <string name="recognize_unknow">不认识</string>
    <string name="translate">翻译</string>
    <string name="start_to_follow">跟读</string>
    <string name="go_on_follow">继续跟读</string>
    <string name="unfollow">不跟读</string>
    <string name="start">开始</string>
    <string name="listen">听</string>
    <string name="finish">完毕</string>
    <string name="exit_program">再按一次退出应用</string>
    <string name="sentence">单句跟读</string>
    <string name="continuity">连续跟读</string>
    <string name="conversation">对话模式</string>
    <string name="loadmore">正在加载...</string>
    <string name="nomore">没有了!</string>
    <string name="delete">删除</string>
    <string name="empty">清空</string>
    <string name="share_dialog_text_1">文字</string>
    <string name="share_dialog_text_2">图片</string>
    <string name="take_photo">拍照翻译</string>
    <string name="photo_album">相册选图</string>
    <string name="check_detail">查看详情</string>
    <string name="privacy_1">查词翻译生词本同步等</string>
    <string name="privacy_2">拍照翻译、离线翻译等</string>
    <string name="privacy_1_s">需要获取设备信息权限</string>
    <string name="privacy_2_s">需要访问SD卡权限</string>
    <string name="privacy_1_yys">查词翻译生词本同步等</string>
    <string name="privacy_2_yys">拍照识别等</string>
    <string name="privacy_1_ywcd">查词生词本同步等</string>
    <string name="privacy_2_ywcd">拍照识别等</string>
    <string name="next_unit">下一单元</string>
    <string name="dancirenzhi">单词认知</string>
    <string name="dancirenzhi_des">学习本单元所有单词</string>
    <string name="dancisuji">听音速记</string>
    <string name="dancisuji_des">听读音记单词</string>
    <string name="dancitingxuan">读音选词</string>
    <string name="word_test_result">测试结果</string>
    <string name="dancitingxuan_des">根据读音选单词</string>
    <string name="danciceshi">单词选义</string>
    <string name="danciceshi_des">根据单词选词义</string>
    <string name="ciyixuanci">词义选词</string>
    <string name="ciyixuanci_des">根据词义选单词</string>
    <string name="pinxie">拼写练习</string>
    <string name="pinxie_des">根据提示拼写单词</string>
    <string name="try_again">再来一次</string>
    <string name="finish_test">打完收工</string>
    <string name="fight_success">考试通过</string>
    <string name="fight_fail">考砸了，继续加油</string>
    <string name="xmly_fm">来源:喜马拉雅APP</string>
    <string name="speak_english">请点击话筒说英语</string>
    <string name="speak_chinese">请点击话筒说普通话</string>
    <string name="network_error">网络错误，请稍后重试</string>
    <string name="network_offline">网络错误，请检测网络链接</string>
    <string name="no_result">没有查询到结果</string>
    <string name="app_id">50aa1213</string>
    <string name="preference_default_iat_engine_en">sms-en</string>
    <string name="preference_key_iat_rate">iat_rate</string>
    <string name="preference_title_iat_rate">录音采样率</string>
    <string name="preference_default_iat_rate">rate16k</string>
    <string name="preference_key_iat_engine">iat_engine</string>
    <string name="preference_default_iat_engine">iat</string>
    <string name="preference_key_recognizer">recognizer</string>
    <string name="preference_default_recognizer">zh_cn</string>
    <string name="preference_key_accent">accent</string>
    <string name="preference_default_accent">mandarin</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="play_speed_text">播放语速调节：</string>
    <string name="fifth_normal">50为正常速度</string>
    <string name="i_speak_cantonese">我说粤语</string>
    <string name="clear_all_except_favorite">删除非收藏记录</string>
    <string name="clear_all_record">删除所有记录</string>
    <string name="clear_all">清空</string>
    <string name="invite_friends">邀请好友</string>
    <string name="invite_friends_qrcode">扫二维码</string>
    <string name="clear_success">清除成功</string>
    <string name="preference_key_tts_music">tts_music</string>
    <string name="preference_title_tts_music">背景音乐</string>
    <string name="share_buddy">分享给小伙伴</string>
    <string name="wechat_long_click">微信长按有惊喜</string>
    <string name="title_privacy_policy">亲，感谢您一直以来的信任!!!\n\n根据相关政策，我们诚恳地告知您，为了给您提供更优质的服务，
    也为了确保&appname;服务的正常运行，我们需要使用您的部分数据，请在使用前查看并同意隐私政策与服务条款。</string>
    <string name="spoken_english_practice">口语</string>
    <string name="reading">阅读</string>
    <string name="examination">考题</string>
    <string name="foreign_website">英文网站</string>
</resources>