<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            >
            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="18dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />
            <TextView
                android:id="@+id/welcome_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/app_icon"
                android:text="@string/app_name"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                android:textSize="@dimen/biggerx" />
            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/app_icon"
                android:layout_below="@id/welcome_tv"
                android:layout_marginTop="13dip"
                android:gravity="center_horizontal"
                android:text="@string/app_des"
                android:textColor="@color/text_black"
                android:textSize="@dimen/big" />
        </RelativeLayout>

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dip"
            android:gravity="left"
            android:textColor="@color/text_black"
            android:textSize="@dimen/middle"
            android:text="@string/title_privacy_policy"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/privacy_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:text="@string/privacy_1"
                android:textSize="@dimen/biggerx"
                android:textStyle="bold"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:layout_marginTop="@dimen/padding_7"
                android:text="@string/privacy_1_s"
                android:textSize="@dimen/middle"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="@dimen/padding_20"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/privacy_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:text="@string/privacy_2"
                android:textSize="@dimen/biggerx"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:layout_marginTop="@dimen/padding_7"
                android:text="@string/privacy_2_s"
                android:textSize="@dimen/middle"
                />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center_horizontal"
            android:text="@string/title_agree"
            android:padding="@dimen/padding_10"
            android:background="@drawable/blue_btn_bg_selector"
            android:textColor="@color/white"
            android:textSize="@dimen/bigger" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:id="@+id/no_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_disagree"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/small" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>