<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/word_study_plan"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/word_study_change_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:foreground="@drawable/framelayout_selector"
        android:padding="@dimen/padding_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_books"
            android:textColor="@color/text_grey1"
            android:textSize="@dimen/small" />
    </FrameLayout>

    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/arc_progress"
        custom:arc_angle="270"
        custom:arc_bottom_text="@string/start_unlock"
        custom:arc_bottom_text_size="@dimen/smaller_l"
        custom:arc_finished_color="@color/theme_color"
        custom:arc_progress="0"
        custom:arc_stroke_width="10sp"
        custom:arc_suffix_text=" "
        custom:arc_suffix_text_size="@dimen/middle"
        custom:arc_text_color="@color/theme_color"
        custom:arc_text_size="@dimen/title"
        custom:arc_unfinished_color="@color/text_grey1"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_centerInParent="true"
        android:background="@color/white" />

    <TextView
        android:id="@+id/word_study_book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/arc_progress"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_10"
        android:text=""
        android:textColor="@color/theme_color"
        android:textSize="@dimen/big" />

    <FrameLayout
        android:id="@+id/word_study_new_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:foreground="@drawable/framelayout_selector"
        android:orientation="vertical"
        android:padding="@dimen/padding_12">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/new_and_wrong"
            android:textColor="@color/text_black"
            android:textSize="@dimen/middle" />
    </FrameLayout>
</RelativeLayout>